--- a/app/src/main/res/layout/activity_login.xml
+++ b/app/src/main/res/layout/activity_login.xml
@@ -6,7 +6,8 @@
     android:id="@+id/container"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:paddingTop="?attr/actionBarSize" >
+    android:paddingTop="?attr/actionBarSize"
+    android:layout_gravity="center">
 
     <Button
         android:id="@+id/button"
@@ -14,7 +15,9 @@
         android:layout_height="72dp"
         android:text="LOG IN"
         tools:layout_editor_absoluteX="121dp"
-        tools:layout_editor_absoluteY="451dp" />
+        tools:layout_editor_absoluteY="451dp"
+        android:layout_below="@+id/imageView"
+        android:onClick="activity_main"/>
 
     <ImageView
         android:id="@+id/imageView"
