--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -52,7 +52,8 @@
             android:layout_marginLeft="20dp"
             android:layout_marginRight="20dp"
             android:layout_toRightOf="@id/button7"
-            android:text="Zgłoś" />
+            android:text="Zgłoś"
+            />
 
         <Button
             android:id="@+id/button12"
@@ -81,13 +82,14 @@
             android:text="Obserwacja" />
 
         <Button
-            android:id="@+id/button10"
+            android:id="@+id/interwencja"
             android:layout_width="192dp"
             android:layout_height="87dp"
             android:layout_below="@id/button9"
             android:layout_marginTop="20dp"
             android:layout_marginBottom="20dp"
-            android:text="Interwencja" />
+            android:text="Interwencja"
+            android:onClick="to_interwencja"/>
     </RelativeLayout>
 
 </RelativeLayout>
