--- a/app/src/main/res/layout/activity_login.xml
+++ b/app/src/main/res/layout/activity_login.xml
@@ -1,23 +1,12 @@
 <?xml version="1.0" encoding="utf-8"?>
-<androidx.constraintlayout.widget.ConstraintLayout
-    xmlns:android="http://schemas.android.com/apk/res/android"
+<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:id="@+id/container"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:paddingTop="?attr/actionBarSize"
-    android:layout_gravity="center">
-
-    <Button
-        android:id="@+id/button"
-        android:layout_width="169dp"
-        android:layout_height="72dp"
-        android:text="LOG IN"
-        tools:layout_editor_absoluteX="121dp"
-        tools:layout_editor_absoluteY="451dp"
-        android:layout_below="@+id/imageView"
-        android:onClick="activity_main"/>
+    android:layout_gravity="center"
+    android:paddingTop="?attr/actionBarSize">
 
     <ImageView
         android:id="@+id/imageView"
@@ -26,5 +15,15 @@
         tools:layout_editor_absoluteX="72dp"
         tools:layout_editor_absoluteY="130dp"
         tools:srcCompat="@mipmap/logo" />
+
+    <Button
+        android:id="@+id/button"
+        android:layout_width="169dp"
+        android:layout_height="72dp"
+        android:layout_below="@+id/imageView"
+        android:onClick="to_main"
+        android:text="LOG IN"
+        tools:layout_editor_absoluteX="121dp"
+        tools:layout_editor_absoluteY="451dp" />
 
 </androidx.constraintlayout.widget.ConstraintLayout>
