--- a/app/src/main/res/layout/mapa.xml
+++ b/app/src/main/res/layout/mapa.xml
@@ -1,5 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
 <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent" >
@@ -22,7 +23,7 @@
             android:layout_marginTop="5dp"
             android:layout_marginEnd="5dp"
             android:layout_marginBottom="5dp"
-            android:text="Nowe zgłoszenie"
+            android:text="Okoliczne zgłoszenias"
             android:textColor="#000"
             android:textSize="20sp" />
 
@@ -54,6 +55,7 @@
             android:layout_marginRight="20dp"
             android:layout_toRightOf="@id/button7"
             android:text="Zgłoś"
+            android:onClick="to_main"
             />
 
         <Button
@@ -78,22 +80,30 @@
         android:layout_below="@id/header"
         android:gravity="center" >
 
-        <Button
-            android:id="@+id/button9"
-            android:layout_width="192dp"
-            android:layout_height="87dp"
-            android:text="Obserwacja"
-            android:onClick="to_zgloszenie"/>
+        <ImageView
+            android:id="@+id/imageView5"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            app:srcCompat="@drawable/mapa" />
+    </RelativeLayout>
+
+    <LinearLayout
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
+        android:layout_above="@id/footer"
+        android:layout_marginStart="20dp"
+        android:layout_marginTop="20dp"
+        android:layout_marginEnd="20dp"
+        android:layout_marginBottom="20dp"
+        android:gravity="bottom|end"
+        android:orientation="horizontal">
 
         <Button
-            android:id="@+id/interwencja"
-            android:layout_width="192dp"
-            android:layout_height="87dp"
-            android:layout_below="@id/button9"
-            android:layout_marginTop="20dp"
-            android:layout_marginBottom="20dp"
-            android:text="Interwencja"
-            android:onClick="to_interwencja"/>
-    </RelativeLayout>
+            android:id="@+id/button10"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:onClick="to_okolica"
+            android:text="Lista" />
+    </LinearLayout>
 
 </RelativeLayout>
