--- a/app/src/main/res/layout/interwencja.xml
+++ b/app/src/main/res/layout/interwencja.xml
@@ -69,6 +69,7 @@
             android:layout_marginTop="20dp"
             android:layout_marginBottom="20dp"
             android:text="Zwierzę może być zaginione"
+            android:onClick="to_zgloszenie"
             />
 
         <Button
@@ -78,7 +79,8 @@
             android:layout_marginTop="20dp"
             android:layout_marginBottom="20dp"
             android:layout_above="@id/button5"
-            android:text="Zwierzę stwarza zagrożenie" />
+            android:text="Zwierzę stwarza zagrożenie"
+            android:onClick="to_zgloszenie"/>
 
         <Button
             android:id="@+id/button5"
