--- a/app/src/main/res/layout/interwencja_pomoc.xml
+++ b/app/src/main/res/layout/interwencja_pomoc.xml
@@ -87,7 +87,7 @@
             android:layout_marginTop="20dp"
             android:layout_marginBottom="20dp"
             android:text="Powrót"
-            android:onClick="to_interwencja"/>
+            android:onClick="to_main"/>
 
         <TextView
             android:id="@+id/textView3"
