--- a/app/src/main/res/layout/obserwacja.xml
+++ b/app/src/main/res/layout/obserwacja.xml
@@ -135,7 +135,8 @@
             android:id="@+id/button7"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:text="Okolica" />
+            android:text="Okolica"
+            />
 
         <Button
             android:id="@+id/button8"
@@ -144,7 +145,8 @@
             android:layout_marginLeft="20dp"
             android:layout_marginRight="20dp"
             android:layout_toRightOf="@id/button7"
-            android:text="Zgłoś" />
+            android:text="Zgłoś"
+            android:onClick="to_main"/>
 
         <Button
             android:id="@+id/button12"
@@ -153,7 +155,8 @@
             android:layout_marginLeft="20dp"
             android:layout_marginRight="20dp"
             android:layout_toLeftOf="@id/button7"
-            android:text="Profil" />
+            android:text="Profil"
+            android:onClick="to_profil"/>
     </RelativeLayout>
 
 </RelativeLayout>
