--- a/app/src/main/res/layout/obserwacja.xml
+++ b/app/src/main/res/layout/obserwacja.xml
@@ -136,6 +136,7 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:text="Okolica"
+            android:onClick="to_okolica"
             />
 
         <Button
