--- a/app/src/main/res/layout/potwierdzenie.xml
+++ b/app/src/main/res/layout/potwierdzenie.xml
@@ -43,7 +43,8 @@
             android:id="@+id/button7"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:text="Okolica" />
+            android:text="Okolica"
+            android:onClick="to_okolica"/>
 
         <Button
             android:id="@+id/button8"
